<resources>
    <string name="app_name">DemoRestaurant</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trang_ch">Trang chủ</string>
    <string name="t_b_n">Đặt bàn</string>
    <string name="th_ng_tin_t">Thông tin đặt</string>
    <string name="t_i">Tôi</string>
</resources>