<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@drawable/logsign"
    tools:context=".logandreg.Register">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="303dp"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="#00BCD4"
        app:boxStrokeWidthFocused="3dp"
        app:hintTextColor="#00BCD4"
        app:startIconDrawable="@android:drawable/ic_dialog_email"
        app:startIconTint="#4CAF50">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="#00BCD4"
        app:boxStrokeWidthFocused="3dp"
        app:hintTextColor="#00BCD4"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
        app:startIconTint="#4CAF50">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/register_btn"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:backgroundTint="#FF9800"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/click_to_login"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>