<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0283228"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/fragment_id"
        android:layout_width="match_parent"
        android:layout_height="665dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <FrameLayout
            android:id="@+id/framelog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="179dp"
                android:background="@drawable/bg2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="90dp"
                android:text="Welcome to"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="90dp"
                android:text="Hunt Rest"
                android:textColor="#FF9800"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="120dp"
                android:text="Delivering great food for more than 18 years!"
                android:textColor="#CAC2C2"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="179dp"
                android:layout_marginTop="179dp"
                android:background="@drawable/aboutbg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="190dp"
                android:text="Voluptatem dignissimos provident quasi corporis voluptates sit assumenda."
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="235dp"
                android:text="+ Ullamco laboris nisi ut aliquip ex ea commodo consequat."
                android:textColor="#fff"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="255dp"
                android:text="+ Duis aute irure dolor in reprehenderit in voluptate velit."
                android:textColor="#fff"
                android:textSize="13sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="285dp"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="350dp"
                android:background="#2B2A2A"
                android:text="--------------- WHY US ---------------"
                android:textAlignment="center"
                android:textColor="#9A9994"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="370dp"
                android:text="Why Choose Our Restaurant"
                android:textAlignment="center"
                android:textColor="#FFC107"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="400dp"
                android:text="_________ Because _________"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="440dp"
                android:background="@drawable/gallery1"
                android:text="01"
                android:textAlignment="center"
                android:textColor="#FF9800"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="500dp"
                android:layout_marginRight="50dp"
                android:text="Lorem Ipsum Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat"
                android:textAlignment="center"
                android:textColor="#E3E1DE"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="600dp"
                android:background="@drawable/gallery2"
                android:text="02"
                android:textAlignment="center"
                android:textColor="#FF9800"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="650dp"
                android:layout_marginRight="50dp"
                android:text="Lorem Ipsum Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat"
                android:textAlignment="center"
                android:textColor="#E3E1DE"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="800dp"
                android:background="@drawable/gallery2"
                android:text="03"
                android:textAlignment="center"
                android:textColor="#FF9800"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="850dp"
                android:layout_marginRight="50dp"
                android:text="Lorem Ipsum Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat"
                android:textAlignment="center"
                android:textColor="#E3E1DE"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>
    </FrameLayout>

    <Button
        android:id="@+id/home_btn"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#FAB43E"
        android:text="@string/trang_ch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/datban_btn"
        app:layout_constraintTop_toBottomOf="@+id/fragment_id"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/datban_btn"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#FAB43E"
        android:text="@string/t_b_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/thongtindat_btn"
        app:layout_constraintTop_toBottomOf="@+id/fragment_id"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/thongtindat_btn"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#FAB43E"
        android:text="@string/th_ng_tin_t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/user_btn"
        app:layout_constraintTop_toBottomOf="@+id/fragment_id"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/user_btn"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#FAB43E"
        android:text="@string/t_i"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_id"
        app:layout_constraintVertical_bias="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>